--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ h1 {
 .books img {
   max-width: 100px;
   max-height: 100px;
-  margin-right: 20px;
+  margin: 1% 5%;
 }
 .books .book-1 {
   border: 0.1rem solid rgb(192, 33, 33);
   border-radius: 5%;
-  margin: 10px 33%;
+  margin: 2% 33%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,7 +34,7 @@ h1 {
 .books .book-2 {
   border: 0.1rem solid rgb(192, 33, 33);
   border-radius: 5%;
-  margin: 10px 33%;
+  margin: 2% 33%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -42,7 +42,7 @@ h1 {
 .books .book-3 {
   border: 0.1rem solid rgb(192, 33, 33);
   border-radius: 5%;
-  margin: 10px 33%;
+  margin: 2% 33%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -50,7 +50,7 @@ h1 {
 .books .book-4 {
   border: 0.1rem solid rgb(192, 33, 33);
   border-radius: 5%;
-  margin: 10px 33%;
+  margin: 2% 33%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,7 +58,7 @@ h1 {
 .books .book-5 {
   border: 0.1rem solid rgb(192, 33, 33);
   border-radius: 5%;
-  margin: 10px 33%;
+  margin: 2% 33%;
   display: flex;
   justify-content: center;
   align-items: center;
