--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,11 @@
-$TextColor-1: rgb(23, 28, 128);
+$TextColor-1: rgb(158, 31, 31);
 $TextColor-2: rgb(12, 111, 169);
-$TextColor-3: rgb(162, 47, 160);
+$TextColor-3: rgb(108, 14, 106);
 $TextSize-1: 4rem;
 $TextSize-2: 2.5rem;
 $TextSize-3: 1.75rem;
 
-$DivBorder: 0.5rem double rgb(191, 207, 194);
+$DivBorder: 0.5rem groove rgb(191, 207, 194);
 $BooksBorder: 0.1rem solid rgb(192, 33, 33);
 
 body {
@@ -14,6 +14,7 @@ body {
 h1 {
   color: $TextColor-1;
   font-size: $TextSize-1;
+  background-color: bisque;
   border: $DivBorder;
   border-radius: 5%;
 }
@@ -35,12 +36,13 @@ h1 {
 
 .books {
   img {
-    max-width: 100px;
-    max-height: 100px;
+    max-width: 10em;
+    max-height: 10em;
     margin: 1% 5%;
   }
   @for $i from 1 through 5 {
     .book-#{$i} {
+      background-color: burlywood;
       border: $BooksBorder;
       border-radius: 5%;
       margin: 2% 33%;
