--- a/style.css
+++ b/style.css
@@ -3,25 +3,24 @@ body {
   padding-bottom: 5%;
 }
 
-h1 {
+.head {
+  text-align: center;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+.head h1 {
   color: rgb(158, 31, 31);
   font-size: 4rem;
   background-color: bisque;
   border: 0.5rem groove rgb(191, 207, 194);
   border-radius: 5%;
 }
-
-.text h2 {
+.head h2 {
   color: rgb(12, 111, 169);
   font-size: 2.5rem;
 }
-.text p {
+.head p {
   color: rgb(108, 14, 106);
   font-size: 1.75rem;
-}
-
-.head {
-  text-align: center;
 }
 
 .books img {
