--- a/style.scss
+++ b/style.scss
@@ -12,27 +12,28 @@ body {
   background-size: cover;
   padding-bottom: 5%;
 }
-h1 {
-  color: $TextColor-1;
-  font-size: $TextSize-1;
-  background-color: bisque;
-  border: $DivBorder;
-  border-radius: 5%;
-}
 
-.text {
+.head {
+  text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+
+  h1 {
+    color: $TextColor-1;
+    font-size: $TextSize-1;
+    background-color: bisque;
+    border: $DivBorder;
+    border-radius: 5%;
+  }
+
   h2 {
     color: $TextColor-2;
     font-size: $TextSize-2;
   }
+
   p {
     color: $TextColor-3;
     font-size: $TextSize-3;
   }
-}
-
-.head {
-  text-align: center;
 }
 
 .books {
@@ -55,12 +56,11 @@ h1 {
 }
 
 footer {
-   .breaker {
+  .breaker {
     clear: both;
-   }
-   a {
+  }
+  a {
     float: right;
     margin: 1% 1%;
-   }
+  }
 }
-
