--- a/style.css
+++ b/style.css
@@ -24,10 +24,9 @@ body {
 }
 
 .books img {
-  max-width: 10em;
-  max-height: 10em;
-  margin: 1% 5%;
-  padding: 0 5%;
+  max-width: 106px;
+  max-height: 160px;
+  margin: 1% 0 1% 15%;
 }
 .books .book-1 {
   background-color: burlywood;
@@ -35,7 +34,6 @@ body {
   border-radius: 5%;
   margin: 2% 33%;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 .books .book-2 {
@@ -44,7 +42,6 @@ body {
   border-radius: 5%;
   margin: 2% 33%;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 .books .book-3 {
@@ -53,7 +50,6 @@ body {
   border-radius: 5%;
   margin: 2% 33%;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 .books .book-4 {
@@ -62,7 +58,6 @@ body {
   border-radius: 5%;
   margin: 2% 33%;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 .books .book-5 {
@@ -71,13 +66,12 @@ body {
   border-radius: 5%;
   margin: 2% 33%;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 .books a {
-  margin-right: -5%;
-  margin-left: -10%;
-  padding: 0 15%;
+  margin-right: auto;
+  margin-left: auto;
+  overflow: hidden;
 }
 
 footer .breaker {
