--- a/style.scss
+++ b/style.scss
@@ -5,9 +5,13 @@ $TextSize-1: 4rem;
 $TextSize-2: 2.5rem;
 $TextSize-3: 1.75rem;
 
+// Border for book store name
 $DivBorder: 0.5rem groove rgb(191, 207, 194);
+
+// Border for books
 $BooksBorder: 0.1rem solid rgb(192, 33, 33);
 
+// Makes background image full size - look up how to get the image opaque?
 body {
   background-size: cover;
   padding-bottom: 5%;
@@ -17,6 +21,7 @@ body {
   text-align: center;
   font-family: Georgia, 'Times New Roman', Times, serif;
 
+// Styling for book store name header
   h1 {
     color: $TextColor-1;
     font-size: $TextSize-1;
@@ -37,31 +42,35 @@ body {
 }
 
 .books {
+// Styling for book cover images
   img {
-    max-width: 10em;
-    max-height: 10em;
-    margin: 1% 5%;
-    padding: 0 5%;
+    max-width: 106px;
+    max-height: 160px;
+    margin: 1% 0 1% 15%;
   }
+// Loop to apply background and spacing to all 5 book divs
   @for $i from 1 through 5 {
     .book-#{$i} {
       background-color: burlywood;
       border: $BooksBorder;
+    // border-radius applys curved edges
       border-radius: 5%;
+    // Apply 1/3 margin to both left and right side of div and slight top and bottom margin
       margin: 2% 33%;
+    // 
       display: flex;
-      justify-content: center;
-      align-items: center;
-      
+      align-items: center;     
     }
   }
+// Spacing for book title text, auto helps center while keeping images in line, also hides text overflow in div when window shrinks
    a {
-     margin-right: -5%;
-     margin-left: -10%;
-     padding: 0 15%;
-       }
+     margin-right: auto;
+     margin-left: auto;
+     overflow: hidden;
+   }
 }
 
+// Formatting break with div between two links in footer, floating them to the right and adding spacing
 footer {
   .breaker {
     clear: both;
