--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 $TextColor-1: rgb(158, 31, 31);
-$TextColor-2: rgb(12, 111, 169);
-$TextColor-3: rgb(108, 14, 106);
+$TextColor-2: rgb(2, 46, 71);
+$TextColor-3: rgba(135, 14, 133, 0.875);
 $TextSize-1: 4rem;
 $TextSize-2: 2.5rem;
 $TextSize-3: 1.75rem;
@@ -19,9 +19,9 @@ body {
 
 .head {
   text-align: center;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
 
-// Styling for book store name header
+  // Styling for book store name header
   h1 {
     color: $TextColor-1;
     font-size: $TextSize-1;
@@ -42,32 +42,32 @@ body {
 }
 
 .books {
-// Styling for book cover images
+  // Styling for book cover images
   img {
-    max-width: 106px;
-    max-height: 160px;
+    max-width: 20%;
+    max-height: 20%;
     margin: 1% 0 1% 15%;
   }
-// Loop to apply background and spacing to all 5 book divs
+  // Loop to apply background and spacing to all 5 book divs
   @for $i from 1 through 5 {
     .book-#{$i} {
       background-color: burlywood;
       border: $BooksBorder;
-    // border-radius applys curved edges
+      // border-radius applys curved edges
       border-radius: 5%;
-    // Apply 1/3 margin to both left and right side of div and slight top and bottom margin
+      // Apply 1/3 margin to both left and right side of div and slight top and bottom margin
       margin: 2% 33%;
-    // 
+      //
       display: flex;
-      align-items: center;     
+      align-items: center;
     }
   }
-// Spacing for book title text, auto helps center while keeping images in line, also hides text overflow in div when window shrinks
-   a {
-     margin-right: auto;
-     margin-left: auto;
-     overflow: hidden;
-   }
+  // Spacing for book title text, auto helps center while keeping images in line, also hides text overflow in div when window shrinks
+  a {
+    margin-right: auto;
+    margin-left: auto;
+    overflow: hidden;
+  }
 }
 
 // Formatting break with div between two links in footer, floating them to the right and adding spacing
