--- a/style.scss
+++ b/style.scss
@@ -57,7 +57,7 @@ body {
       border-radius: 5%;
       // Apply 1/3 margin to both left and right side of div and slight top and bottom margin
       margin: 2% 33%;
-      //
+      // Alignment of book titles within each div
       display: flex;
       align-items: center;
     }
