--- a/style.scss
+++ b/style.scss
@@ -70,7 +70,7 @@ body {
   }
 }
 
-// Formatting break with div between two links in footer, floating them to the right and adding spacing
+// Formatting break with div between two links in footer, floating links to the right and adding spacing
 footer {
   .breaker {
     clear: both;
